--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,22 @@
 spring.application.name=Ecommerce-core
-# Configuración del Servidor
+
+# Configuration del Servidor
 server.port=8080
 
-# Configuración de la Base de Datos PostgreSQL
+# Configuration de la Base de Datos PostgresSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de Hibernate (JPA)
+# Configuration de Hibernate (JPA)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuración de MongoDB
+# Configuration de MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
 
-# Configuración de Logs
+# Configuration de Logs
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
