--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ spring.jpa.properties.hibernate.format_sql=true
 # Configuration de MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
 
+# Configuración de Seguridad JWT
+jwt.secret=${JWT_SECRET:yHtMDcZO627sAjQ1UuzLnyJ2v4vMuOD8L958AO7PJgkL}
+jwt.expiration=${JWT_EXPIRATION:3600000}
+
 # Configuration de Logs
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
