Endpoints ok, Auth OK, documentacion swagger no completa , faltan test unitarios, pruebas e2e.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Configuration de MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
 
-# Configuración de Seguridad JWT
+# Configuracion de Seguridad JWT
 jwt.secret=${JWT_SECRET:yHtMDcZO627sAjQ1UuzLnyJ2v4vMuOD8L958AO7PJgkL}
 jwt.expiration=${JWT_EXPIRATION:3600000}
 
