--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,10 @@ jwt.secret=${JWT_SECRET:yHtMDcZO627sAjQ1UuzLnyJ2v4vMuOD8L958AO7PJgkL}
 jwt.expiration=${JWT_EXPIRATION:3600000}
 
 # Configuration de Logs
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet=DEBUG
+logging.level.org.springframework.web.HttpMessageConverter=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.fasterxml.jackson.databind=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
