Endpoint OK, falta doc, test unit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,21 @@
 spring.application.name=Ecommerce-core
-
-# Configuration del Servidor
+# Configuración del Servidor
 server.port=8080
 
-# Configuration de la Base de Datos PostgresSQL
+# Configuración de la Base de Datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuration de Hibernate (JPA)
+# Configuración de Hibernate (JPA)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuration de MongoDB
+# Configuración de MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
 
-# Configuracion de Seguridad JWT
-jwt.secret=${JWT_SECRET:yHtMDcZO627sAjQ1UuzLnyJ2v4vMuOD8L958AO7PJgkL}
-jwt.expiration=${JWT_EXPIRATION:3600000}
-
-# Configuration de Logs
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.web.servlet=DEBUG
-logging.level.org.springframework.web.HttpMessageConverter=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.com.fasterxml.jackson.databind=DEBUG
+# Configuración de Logs
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
