--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Ecommerce-core
 # Configuración del Servidor
 server.port=8080
+spring.jackson.deserialization.use-big-decimal-for-floats=true
 
 # Configuración de la Base de Datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
@@ -17,5 +18,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
 
 # Configuración de Logs
+logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
