--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 spring.application.name=Ecommerce-core
-# Configuración del Servidor
+# Configuracion del Servidor
 server.port=8080
 spring.jackson.deserialization.use-big-decimal-for-floats=true
 
-# Configuración de la Base de Datos PostgreSQL
+# Configuracion de la Base de Datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de Hibernate (JPA)
+# Configuracion de Hibernate (JPA)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuración de MongoDB
+# Configuracion de MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
 
-# Configuración de Logs
+# Configuracion de Logs
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
