Refactor, DAO layer desacoplada, falta terminar los test unitarios.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=Ecommerce-core
 # Configuracion del Servidor
 server.port=8080
+security.jwt.secret=MiClaveSecretaParaJWTDe64CaracteresDeLargoSeguro1234567890!
+# 1 hora en milisegundos = 3600000
+security.jwt.expiration=3600000
 spring.jackson.deserialization.use-big-decimal-for-floats=true
+spring.main.allow-bean-definition-overriding=true
+
 
 # Configuracion de la Base de Datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
