Test unitarios completos, faltan integración y automatización con selenium.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
 # Configuracion de Logs
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework=INFO
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=INFO
