Adaptado para Railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 spring.application.name=Ecommerce-core
 # Configuracion del Servidor
-server.port=8080
-security.jwt.secret=MiClaveSecretaParaJWTDe64CaracteresDeLargoSeguro1234567890!
-# 1 hora en milisegundos = 3600000
-security.jwt.expiration=3600000
+#server.port=8080
+#security.jwt.secret=MiClaveSecretaParaJWTDe64CaracteresDeLargoSeguro1234567890!
+#security.jwt.expiration=3600000
+# Configuración del Servidor
+server.port=${SERVER_PORT:8080}
+security.jwt.secret=${JWT_SECRET}
+security.jwt.expiration=${JWT_EXPIRATION:3600000}
 spring.jackson.deserialization.use-big-decimal-for-floats=true
 spring.main.allow-bean-definition-overriding=true
 
 
 # Configuracion de la Base de Datos PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
-spring.datasource.username=admin
-spring.datasource.password=admin
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuracion de Hibernate (JPA)
@@ -20,7 +26,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Configuracion de MongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
+#spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
+spring.data.mongodb.uri=${MONGODB_URI}
 
 # Configuracion de Logs
 logging.level.org.springframework.security=DEBUG
