--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Ecommerce-core
 #server.port=8080
 #security.jwt.secret=MiClaveSecretaParaJWTDe64CaracteresDeLargoSeguro1234567890!
 #security.jwt.expiration=3600000
-# Configuración del Servidor
+# Configuracion del Servidor
 server.port=${SERVER_PORT:8080}
 security.jwt.secret=${JWT_SECRET}
 security.jwt.expiration=${JWT_EXPIRATION:3600000}
