Adaptado para Railway

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ DATABASE_USER=admin
 DATABASE_PASSWORD=admin
 
 # Configuración de MongoDB
-MONGODB_URI=mongodb://localhost:27017/ecommerce
+MONGODB_URI=railwaygodb://localhost:27017/ecommerce
