--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,9 @@ spring.data.mongodb.uri=${MONGODB_URI}
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=INFO
+
+# Habilitar CORS para Spring Security si usas seguridad
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=false
