--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,41 +1,2 @@
-spring.application.name=Ecommerce-core
-# Configuracion del Servidor
-#server.port=8080
-#security.jwt.secret=MiClaveSecretaParaJWTDe64CaracteresDeLargoSeguro1234567890!
-#security.jwt.expiration=3600000
-# Configuracion del Servidor
-server.port=${SERVER_PORT:8080}
-security.jwt.secret=${JWT_SECRET}
-security.jwt.expiration=${JWT_EXPIRATION:3600000}
-spring.jackson.deserialization.use-big-decimal-for-floats=true
-spring.main.allow-bean-definition-overriding=true
-
-
-# Configuracion de la Base de Datos PostgreSQL
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
-#spring.datasource.username=admin
-#spring.datasource.password=admin
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Configuracion de Hibernate (JPA)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Configuracion de MongoDB
-#spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
-spring.data.mongodb.uri=${MONGODB_URI}
-
-# Configuracion de Logs
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework=INFO
-logging.level.org.hibernate.SQL=INFO
-
-# Habilitar CORS para Spring Security si usas seguridad
-spring.web.cors.allowed-origins=*
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=false
+# Definir perfil activo (dev por defecto)
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
