correción application.properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=Ecommerce-core
 
-# Configuración del Servidor
+# Configuracion del Servidor
 server.port=${PORT:8080}
 security.jwt.secret=${JWT_SECRET}
 security.jwt.expiration=${JWT_EXPIRATION}
@@ -8,26 +8,26 @@ security.jwt.expiration=${JWT_EXPIRATION}
 spring.jackson.deserialization.use-big-decimal-for-floats=true
 spring.main.allow-bean-definition-overriding=true
 
-# Configuración de la Base de Datos PostgreSQL (Railway)
+# Configuracion de la Base de Datos PostgreSQL (Railway)
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de Hibernate (JPA)
+# Configuracion de Hibernate (JPA)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuración de MongoDB (Railway)
+# Configuracion de MongoDB (Railway)
 spring.data.mongodb.uri=${MONGODB_URI}
 
-# Configuración de Logs (Menos verboso en producción)
+# Configuracion de Logs (Menos verboso en produccion)
 logging.level.org.springframework.security=WARN
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=WARN
 
-# Configuración de CORS para permitir solo el dominio del frontend
+# Configuracion de CORS para permitir solo el dominio del frontend
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
