--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=Ecommerce-core
 
-# Configuración del Servidor
+# Configuracion del Servidor
 server.port=${SERVER_PORT:8080}
 security.jwt.secret=${JWT_SECRET:ClaveSecretaDesarrollo}
 security.jwt.expiration=${JWT_EXPIRATION:3600000}
@@ -8,21 +8,21 @@ security.jwt.expiration=${JWT_EXPIRATION:3600000}
 spring.jackson.deserialization.use-big-decimal-for-floats=true
 spring.main.allow-bean-definition-overriding=true
 
-# Configuración de la Base de Datos PostgreSQL (Local)
+# Configuracion de la Base de Datos PostgreSQL (Local)
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/ecommerce}
 spring.datasource.username=${DATABASE_USER:admin}
 spring.datasource.password=${DATABASE_PASSWORD:admin}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de Hibernate (JPA)
+# Configuracion de Hibernate (JPA)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuración de MongoDB (Local)
+# Configuracion de MongoDB (Local)
 spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/ecommerce}
 
-# Configuración de Logs
+# Configuracion de Logs
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=INFO
