--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -31,4 +31,4 @@ logging.level.org.hibernate.SQL=WARN
 spring.web.cors.allowed-origins="https://ecommerce-core-production.up.railway.app"
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
+spring.web.cors.allow-credentials=false
