actualizando prod properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Configuracion de MongoDB (Railway)
 spring.data.mongodb.uri=${MONGODB_URI}
 
-# Configuracion de Logs (Menos verboso en produccion)
+# Configuracion de Logs (Menos verboso en producion)
 logging.level.org.springframework.security=WARN
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=WARN
