--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -27,3 +27,8 @@ logging.level.org.springframework.security=WARN
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=WARN
 
+# Configuracion swagger UI
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
