--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -32,3 +32,6 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
+
+# Forzar que Swagger use HTTPS en producción
+springdoc.swagger-ui.urls[0]=/v3/api-docs
