--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Configuracion de MongoDB (Railway)
 spring.data.mongodb.uri=${MONGODB_URI}
 
-# Configuracion de Logs (Menos verboso en producion)
+# Configuracion de Logs (Menos verboso en production)
 logging.level.org.springframework.security=WARN
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=WARN
@@ -33,5 +33,5 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 
-# Forzar que Swagger use HTTPS en producción
+# Forzar que Swagger use HTTPS en production
 springdoc.swagger-ui.urls[0]=/v3/api-docs
