--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -34,4 +34,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 
 # Forzar que Swagger use HTTPS en production
-springdoc.swagger-ui.urls[0]=/v3/api-docs
+# Forzar HTTPS en Swagger
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=https://ecommerce-core-production.up.railway.app/v3/api-docs
