--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 # Este es un archivo de referencia. Copia este contenido en .env y completa los valores.
 
-# Configuración de la base de datos PostgreSQL
+# Configuracion de la base de datos PostgreSQL
 DATABASE_URL=jdbc:postgresql://localhost:5433/test_ecommerce
 DATABASE_USER=test_user
 DATABASE_PASSWORD=test_pass
 
-# Configuración de MongoDB
+# Configuracion de MongoDB
 MONGODB_URI=mongodb://localhost:27018/test_ecommerce
 
-# Configuración del servidor
+# Configuracion del servidor
 SERVER_PORT=8081
 
-# Configuración de seguridad
+# Configuracion de seguridad
 JWT_SECRET=ColocaAquiTuClaveSecreta
 JWT_EXPIRATION=3600000
